--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
-	<title>BKB交易所</title>
+	<title>全球数字货币交易所</title>
 	<link href="http://at.alicdn.com/t/font_813760_ggznj6elain.css" />
 	<script src="./static/jquery.js"></script>
 	<script src="./static/layer/layer.js"></script>
