--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
 	<title>全球数字货币交易所</title>
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link href="http://at.alicdn.com/t/font_813760_ggznj6elain.css" />
 	<script src="./static/jquery.js"></script>
 	<script src="./static/layer/layer.js"></script>
