--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>全球数字货币交易所</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link href="http://at.alicdn.com/t/font_813760_ggznj6elain.css" />
+	<link href="https://at.alicdn.com/t/font_813760_ggznj6elain.css" />
 	<script src="./static/jquery.js"></script>
 	<script src="./static/layer/layer.js"></script>
 	<script src="static/tradeview/charting_library/charting_library.min.js"></script>
